# airsign_dtw_experiments

./: .gitignore  Cargo.toml  README.md
experiments/: Cargo.toml
experiments/src/: main.rs  old  plot.rs  test_results.rs  utils.rs
experiments/src/tmp/: main.rs  main_pre_min_max.rs  main_prova.rs  main_server.rs  old_main.rs
rust_dtw_algorithm/: Cargo.toml
rust_dtw_algorithm/src/: lib.rs
